--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -288,7 +288,7 @@
         </div>
     </div>
 </div>
-<button id="openModalButton" [hidden]="true" (click)="open(content)">Open Modal</button>
+<!--<button id="openModalButton" [hidden]="true" (click)="open(content)">Open Modal</button>
 <ng-template #content let-modal>
     <div class="modal-header">
         <h4 class="modal-title" id="modal-basic-title">Imagen Comparativa</h4>
@@ -315,5 +315,5 @@
             </div>
         </div>
     </div>
-</ng-template>
+</ng-template>-->
 <div *ngIf="loading" class="loading">Loading&#8230;</div>
