--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -97,14 +97,42 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
             <div class="card  card-tasks">
                 <div class="card-header ">
-                    <h5 class="card-category">Backend development</h5>
-                    <h4 class="card-title">Tasks</h4>
+                    <h5 class="card-category">Reportes</h5>
+                    <h4 class="card-title">Apartados</h4>
                 </div>
                 <div class="card-body">
                     <div class="table-full-width table-responsive">
+                        <pagination-controls class="my-pagination" (pageChange)="p = $event">
+                        </pagination-controls>
+                        <table class="table table-striped">
+                            <thead>
+                                <th scope="col">Fecha de creación</th>
+                                <th scope="col">Fecha de edición</th>
+                                <th scope="col">Admin</th>
+                                <th scope="col">Id_Cliente</th>
+                                <th scope="col">Lista De producto</th>
+                                <th></th>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let apart of aparts | paginate: { itemsPerPage: 10, currentPage: p }">
+                                    <td>{{apart.created_at}}</td>
+                                    <td>{{apart.updated_at}}</td>
+                                    <td>{{apart.admin.user}}</td>
+                                    <td>{{apart.clients_id}}</td>
+                                    <td>
+                                        <a (click)="getListProduct(apart.articles)"
+                                            style="font-weight: bold; cursor: pointer;" data-toggle="modal"
+                                            data-target="#ListProducts">
+                                            Ver Productos</a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <!--<div class="table-full-width table-responsive">
                         <table class="table">
                             <tbody>
                                 <tr>
@@ -182,7 +210,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
